retrieveUnpackaged/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>address of the employee</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country from which candidate belong</description>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <description>Company in which candidate is employer</description>
        <label>Current Employer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Candidate is Employed or not</description>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <description>date of birth of employer</description>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_id__c</fullName>
        <description>email if of employee</description>
        <label>Email id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <description>experience of employer</description>
        <label>Experience</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <description>father name of employer</description>
        <label>Father Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation__c</fullName>
        <label>Graduation</label>
        <picklist>
            <controllingField>Post_Graduation__c</controllingField>
            <picklistValues>
                <fullName>Btec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bsc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_skills__c</fullName>
        <description>it skill of employer</description>
        <label>IT skills</label>
        <picklist>
            <controllingField>Currently_Employed__c</controllingField>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBMS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Indian_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indian Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>current manager</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mother_Name__c</fullName>
        <description>mother name of employer</description>
        <label>Mother Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <description>enter the phone number of employer</description>
        <label>Phone number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Graduation__c</fullName>
        <description>post graduation did by employer</description>
        <label>Post Graduation</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mtec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Msc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salarys__c</fullName>
        <description>salary of employer</description>
        <formula>IF( Experience__c &lt; 2,  1  * 1,  IF( Experience__c &gt; 2,  2 * 2,  3 * 3) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State from which chandidate belong</description>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip Code of a place</description>
        <label>Zip Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>queue1_Candidate</fullName>
        <filterScope>Queue</filterScope>
        <label>queue1</label>
        <queue>queue1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>queue2_Candidate</fullName>
        <filterScope>Queue</filterScope>
        <label>queue2</label>
        <queue>queue2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>queue3_Candidate</fullName>
        <filterScope>Queue</filterScope>
        <label>queue3</label>
        <queue>queue3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>new</fullName>
        <active>true</active>
        <errorConditionFormula>IF( LEN( Zip_Code__c ) &lt; 4 , true, false)</errorConditionFormula>
        <errorMessage>enter more than 4</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>valid_multiplier</fullName>
        <active>true</active>
        <description>multiplier should be between 1 to 10</description>
        <errorConditionFormula>Experience__c   &gt; 11 ||  Experience__c    &lt; 0</errorConditionFormula>
        <errorMessage>multiplier should be between 1 to 10</errorMessage>
    </validationRules>
</CustomObject>